feat: :art: Section Hero

--- a/index.html
+++ b/index.html
@@ -7,6 +7,62 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <header>
+      <nav class="navbar container">
+        <a href="" class="navbar__logo">MARCIORDG<span>_</span></a>
+        <ul class="navbar__links">
+          <li><a href="" class="navbar__link">Serviços</a></li>
+          <li><a href="" class="navbar__link">Protocolo</a></li>
+          <li><a href="" class="navbar__link">Cases</a></li>
+          <li><a href="" class="navbar__link">Ferramentas</a></li>
+          <li><a href="" class="navbar__link">Blog</a></li>
+        </ul>
+        <a href="" class="navbar__cta">Solicitar Análise</a>
+      </nav>
+    </header>
+    <section class="hero">
+      <div class="hero__container container">
+        <div class="hero__content">
+          <small class="hero__tag">INFRAESTRUTURA DE VENDAS</small>
+          <h1 class="hero__title">Código que <br />Vende.</h1>
+          <p class="hero__text">
+            A maioria dos devs ignora o marketing. A maioria dos gestores ignora
+            o código. <span>Eu domino os dois</span>. Transformo milissegundos
+            de carregamento em margem de lucro líquida.
+          </p>
+          <form class="hero__audit-form">
+            <div class="hero__audit-group">
+              <input
+                type="text"
+                name=""
+                placeholder="Cole seu site: www.seusite.com.br"
+                id="siteURL"
+                class="hero__audit-group__input"
+              />
+              <button type="button" class="hero__audit-group__button">
+                <svg-load name="eye_tracking" />
+                Analisar
+              </button>
+            </div>
+          </form>
+          <ul class="hero__check-list">
+            <li class="hero__check-item">
+              <svg-load name="check" />Auditoria Manual
+            </li>
+            <li class="hero__check-item">
+              <svg-load name="check" />Resposta via WhatsApp
+            </li>
+          </ul>
+        </div>
+        <div class="hero__visual">
+          <div class="hero__img">
+            <img src="/images/marcio-img.png" alt="" />
+            <small class="hero__img__insta">@MARCIORDG</small>
+            <p class="hero__img__position">Performance & CRO Specialist</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
