feat: :art: section solutions

--- a/index.html
+++ b/index.html
@@ -20,49 +20,121 @@
         <a href="" class="navbar__cta">Solicitar Análise</a>
       </nav>
     </header>
-    <section class="hero">
-      <div class="hero__container container">
-        <div class="hero__content">
-          <small class="hero__tag">INFRAESTRUTURA DE VENDAS</small>
-          <h1 class="hero__title">Código que <br />Vende.</h1>
-          <p class="hero__text">
-            A maioria dos devs ignora o marketing. A maioria dos gestores ignora
-            o código. <span>Eu domino os dois</span>. Transformo milissegundos
-            de carregamento em margem de lucro líquida.
-          </p>
-          <form class="hero__audit-form">
-            <div class="hero__audit-group">
-              <input
-                type="text"
-                name=""
-                placeholder="Cole seu site: www.seusite.com.br"
-                id="siteURL"
-                class="hero__audit-group__input"
-              />
-              <button type="button" class="hero__audit-group__button">
-                <svg-load name="eye_tracking" />
-                Analisar
-              </button>
+    <main>
+      <section class="hero">
+        <div class="hero__container container">
+          <div class="hero__content">
+            <small class="hero__tag">INFRAESTRUTURA DE VENDAS</small>
+            <h1 class="hero__title">Código que <br />Vende.</h1>
+            <p class="hero__text">
+              A maioria dos devs ignora o marketing. A maioria dos gestores
+              ignora o código. <span>Eu domino os dois</span>. Transformo
+              milissegundos de carregamento em margem de lucro líquida.
+            </p>
+            <form class="hero__audit-form">
+              <div class="hero__audit-group">
+                <input
+                  type="text"
+                  name=""
+                  placeholder="Cole seu site: www.seusite.com.br"
+                  id="siteURL"
+                  class="hero__audit-group__input"
+                />
+                <button type="button" class="hero__audit-group__button">
+                  <svg-load name="eye_tracking" />
+                  Analisar
+                </button>
+              </div>
+            </form>
+            <ul class="hero__check-list">
+              <li class="hero__check-item">
+                <svg-load name="check" />Auditoria Manual
+              </li>
+              <li class="hero__check-item">
+                <svg-load name="check" />Resposta via WhatsApp
+              </li>
+            </ul>
+          </div>
+          <div class="hero__visual">
+            <div class="hero__img">
+              <img src="/images/marcio-img.png" alt="" />
+              <small class="hero__img__insta">@MARCIORDG</small>
+              <p class="hero__img__position">Performance & CRO Specialist</p>
             </div>
-          </form>
-          <ul class="hero__check-list">
-            <li class="hero__check-item">
-              <svg-load name="check" />Auditoria Manual
-            </li>
-            <li class="hero__check-item">
-              <svg-load name="check" />Resposta via WhatsApp
-            </li>
-          </ul>
-        </div>
-        <div class="hero__visual">
-          <div class="hero__img">
-            <img src="/images/marcio-img.png" alt="" />
-            <small class="hero__img__insta">@MARCIORDG</small>
-            <p class="hero__img__position">Performance & CRO Specialist</p>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+      <section class="solutions">
+        <div class="solutions__container container">
+          <small class="solutions__small">MENU DE SOLUÇÕES</small>
+          <h2 class="solutions__title section-title">O Que Eu Entrego?</h2>
+          <p class="sultions__text section-text">
+            A intersecção exata entre código, design e tráfego.
+            <span>Um ecossistema completo para vender mais.</span>
+          </p>
+          <div class="solutions__content">
+            <div class="solutions__card card">
+              <svg-load name="code" />
+              <h3 class="solutions__card__title">Desenvolvimento Web</h3>
+              <p class="solutions__card__text card-text">
+                Landing Pages, E-commerces e Dashboards construídos com código
+                puro ou Next.js. Foco total em Core Web Vitals e SEO Técnico.
+              </p>
+              <ul class="solutions__card__list">
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> Load Time < 1s
+                </li>
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> SEO Semântico
+                </li>
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> Responsivo
+                </li>
+              </ul>
+            </div>
+            <div class="solutions__card card">
+              <svg-load name="trending" />
+              <h3 class="solutions__card__title">Gestão de Tráfego</h3>
+              <p class="solutions__card__text card-text">
+                Campanhas de alta performance no Google Ads e Meta Ads. Criação
+                de funis de vendas que perseguem o lead qualificado até a
+                compra.
+              </p>
+              <ul class="solutions__card__list">
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> Remarketing Dinâmico
+                </li>
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> Testes A/B de Criativos
+                </li>
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> Escala de ROI
+                </li>
+              </ul>
+            </div>
+            <div class="solutions__card card">
+              <svg-load name="target" />
+              <h3 class="solutions__card__title">Desenvolvimento Web</h3>
+              <p class="solutions__card__text card-text">
+                Landing Pages, E-commerces e Dashboards construídos com código
+                puro ou Next.js. Foco total em Core Web Vitals e SEO Técnico.
+              </p>
+              <ul class="solutions__card__list">
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> API de Conversão (CAPI)
+                </li>
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> GA4 Avançado
+                </li>
+                <li class="solutions__card__item">
+                  <svg-load name="check" /> Data Layer Custom
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
