feat: :art: section arsenal & protocol

--- a/index.html
+++ b/index.html
@@ -134,6 +134,159 @@
           </div>
         </div>
       </section>
+      <section class="arsenal">
+        <div class="arsenal__container container">
+          <h2 class="arsenal__title section-title">Arsenal Técnico</h2>
+          <div class="arsenal__texts">
+            <p class="arsenal__text section-text">
+              Ferramentas escolhidas não por hype, mas por ROI.
+            </p>
+            <ul class="arsenal__tags">
+              <li class="arsenal__tag">Frontend</li>
+              <li class="arsenal__tag">Backend</li>
+              <li class="arsenal__tag">Tracking</li>
+            </ul>
+          </div>
+          <div class="arsenal__content">
+            <div class="arsenal__card card">
+              <div class="arsenal__card__svgs">
+                <svg-load name="javascript" />
+              </div>
+              <h3 class="arsenal__card__title">JavaScript Puro</h3>
+              <p class="arsenal__card__text card-text">
+                Sem bibliotecas pesadas. Manipulação direta do DOM para
+                velocidade extrema
+              </p>
+            </div>
+            <div class="arsenal__card card">
+              <div class="arsenal__card__svgs">
+                <svg-load name="php" />
+              </div>
+              <h3 class="arsenal__card__title">PHP 8.2+</h3>
+              <p class="arsenal__card__text card-text">
+                Backend robusto e seguro. A espinha dorsal da web, otimizada.
+              </p>
+            </div>
+            <div class="arsenal__card card">
+              <div class="arsenal__card__svgs">
+                <svg-load name="sql" />
+              </div>
+              <h3 class="arsenal__card__title">MySQL</h3>
+              <p class="arsenal__card__text card-text">
+                Estruturação de dados relacionais para sistemas complexos e
+                dashboards.
+              </p>
+            </div>
+            <div class="arsenal__card card">
+              <div class="arsenal__card__svgs">
+                <svg-load name="target" />
+              </div>
+              <h3 class="arsenal__card__title">GTM & CAPI</h3>
+              <p class="arsenal__card__text card-text">
+                Rastreamento Server-Side. Fujo dos adblockers e alimento o
+                algoritmo.
+              </p>
+            </div>
+            <div class="arsenal__card card">
+              <div class="arsenal__card__svgs">
+                <svg-load name="html" />
+                <svg-load name="css" />
+              </div>
+              <h3 class="arsenal__card__title">HTML5 Semântico & CSS3</h3>
+              <p class="arsenal__card__text card-text">
+                A base de tudo. Código limpo que o Google ama ler. SEO Técnico
+                embutido na estrutura.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="protocol">
+        <div class="protocol__container container">
+          <h2 class="protocol__title section-title">
+            O Protocolo RDG <span class="section-title">.</span>
+          </h2>
+          <div class="protocol__content">
+            <div class="protocol__line-box">
+              <span class="protocol__line"></span>
+            </div>
+            <ul class="protocol__list">
+              <li class="protocol__card card">
+                <h3 class="protocol__card__title">
+                  1. Auditoria Forense (Diagnóstico)
+                </h3>
+                <p class="protocol__card__text card-text">
+                  Eu não "acho", eu meço. Antes de escrever uma linha de código,
+                  rastreio onde seu dinheiro está vazando. Analiso scripts
+                  pesados e falhas na atribuição.
+                </p>
+                <ul class="protocol__card__list">
+                  <li class="protocol__card__item">
+                    <svg-load name="search" />
+                    Identificação de "Dead Clicks"
+                  </li>
+                  <li class="protocol__card__item">
+                    <svg-load name="search" />
+                    Análise de Core Web Vitals (LCP/CLS)
+                  </li>
+                </ul>
+              </li>
+              <li class="protocol__card card">
+                <h3 class="protocol__card__title">
+                  2. Engenharia de Elite (Build)
+                </h3>
+                <p class="protocol__card__text card-text">
+                  Chega de temas prontos que pesam uma tonelada. Construo
+                  infraestrutura proprietária focada em uma única métrica:
+                  velocidade. Código limpo que carrega antes do seu cliente
+                  pensar em fechar a aba.
+                </p>
+                <ul class="protocol__card__list">
+                  <li class="protocol__card__item">
+                    <svg-load name="code" />
+                    Zero dependências inúteis
+                  </li>
+                  <li class="protocol__card__item">
+                    <svg-load name="code" />
+                    Otimização a nível de servidor
+                  </li>
+                </ul>
+              </li>
+              <liv class="protocol__card card">
+                <h3 class="protocol__card__title">
+                  3. Camada de Inteligência (Tracking)
+                </h3>
+                <p class="protocol__card__text card-text">
+                  Aqui a mágica acontece. Instalação de API de Conversão
+                  (Server-Side) para furar bloqueadores de anúncios e iOS14. Seu
+                  site passa a "alimentar" o algoritmo do Google/Meta com dados
+                  de ouro.
+                </p>
+                <ul class="protocol__card__list">
+                  <li class="protocol__card__item">
+                    <svg-load name="database" />
+                    Data Layer Estruturado
+                  </li>
+                  <li class="protocol__card__item">
+                    <svg-load name="database" />
+                    Eventos Personalizados de Venda
+                  </li>
+                </ul>
+              </liv>
+              <li class="protocol__card card">
+                <h3 class="protocol__card__title">
+                  4. Teste de Carga & Escala
+                </h3>
+                <p class="protocol__card__text card-text">
+                  Entrega final pronta para tráfego pesado. Seu site aguenta
+                  picos de Black Friday sem cair, convertendo o máximo possível
+                  do tráfego pago que você compra.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/js/main.js"></script>
   </body>
