feat: :art: Track Record

--- a/index.html
+++ b/index.html
@@ -396,6 +396,94 @@
           </div>
         </div>
       </section>
+      <section class="projects">
+        <div class="projects__container container">
+          <h2 class="projects__title section-title">Track Record</h2>
+          <div class="projects__content">
+            <div class="projects__card">
+              <div class="projects__card__img"><img src="" alt="" /></div>
+              <div class="projects__card__content">
+                <div class="projects__card__titles">
+                  <h3 class="projects__card__title">SaaS Financeiro</h3>
+                  <span class="projects__card__tag tag">PHP/JS</span>
+                </div>
+                <p class="projects__card__text card-text">
+                  Desenvolvimento de painel administrativo complexo. Redução de
+                  80% no tempo de processamento de relatórios.
+                </p>
+                <div class="projects__card__metrics">
+                  <div class="projects__card__metric">
+                    <small class="projects__card__metric__title"
+                      >Load Time</small
+                    >
+                    <p class="projects__card__metric__value primary">0.4s</p>
+                  </div>
+                  <div class="projects__card__metric">
+                    <small class="projects__card__metric__title"
+                      >Database</small
+                    >
+                    <p class="projects__card__metric__value">MySQL</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="projects__card">
+              <div class="projects__card__img"><img src="" alt="" /></div>
+              <div class="projects__card__content">
+                <div class="projects__card__titles">
+                  <h3 class="projects__card__title">
+                    Landing Page High-Ticket
+                  </h3>
+                  <span class="projects__card__tag tag">HTML/GTM</span>
+                </div>
+                <p class="projects__card__text card-text">
+                  Página de vendas focada em infoproduto. Implementação de
+                  tracking avançado para recuperação de carrinho.
+                </p>
+                <div class="projects__card__metrics">
+                  <div class="projects__card__metric">
+                    <small class="projects__card__metric__title"
+                      >Conversão</small
+                    >
+                    <p class="projects__card__metric__value primary">+45%</p>
+                  </div>
+                  <div class="projects__card__metric">
+                    <small class="projects__card__metric__title"
+                      >Lighthouse</small
+                    >
+                    <p class="projects__card__metric__value">100/100</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="projects__card">
+              <div class="projects__card__img"><img src="" alt="" /></div>
+              <div class="projects__card__content">
+                <div class="projects__card__titles">
+                  <h3 class="projects__card__title">E-commerce API</h3>
+                  <span class="projects__card__tag tag">API/Integration</span>
+                </div>
+                <p class="projects__card__text card-text">
+                  Integração de Conversions API (Meta) via servidor para
+                  contornar bloqueios do iOS14.
+                </p>
+                <div class="projects__card__metrics">
+                  <div class="projects__card__metric">
+                    <small class="projects__card__metric__title"
+                      >Event Match</small
+                    >
+                    <p class="projects__card__metric__value primary">9.8/10</p>
+                  </div>
+                  <div class="projects__card__metric">
+                    <small class="projects__card__metric__title">ROAS</small>
+                    <p class="projects__card__metric__value">5x</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/js/main.js"></script>
   </body>
