feat: :art: section faqs

--- a/index.html
+++ b/index.html
@@ -484,6 +484,12 @@
           </div>
         </div>
       </section>
+      <section class="faq">
+        <div class="faq__container container">
+          <h2 class="faq__title section-title">Perguntas Frequentes</h2>
+          <div class="faq__content"></div>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/js/main.js"></script>
   </body>
