feat: :art: section cta

--- a/index.html
+++ b/index.html
@@ -490,6 +490,82 @@
           <div class="faq__content"></div>
         </div>
       </section>
+      <section class="cta">
+        <div class="cta__container container">
+          <h2 class="cta__title section-title">Vamos Escalar?</h2>
+          <p class="cta__text section-text">
+            Preencha o briefing rápido abaixo. Respondo com um plano de ataque
+            técnico.
+          </p>
+          <form action="" class="cta__form">
+            <div class="cta__form-group">
+              <div class="cta__form__input-wrapper">
+                <label for="" class="cta__form__label">SEU NOME</label>
+                <input
+                  type="text"
+                  name="ctaNome"
+                  id="ctaNome"
+                  class="cta__form__input"
+                  placeholder="Ex: Márcio Rodrigues"
+                />
+              </div>
+              <div class="cta__form__input-wrapper">
+                <label for="" class="cta__form__label">SEU WHATSAPP</label>
+                <input
+                  type="tel"
+                  name="ctaTel"
+                  id="ctaTel"
+                  class="cta__form__input"
+                  placeholder="(00) 99999-9999"
+                />
+              </div>
+              <div class="cta__form__input-wrapper">
+                <label for="" class="cta__form__label">SEU EMAIL</label>
+                <input
+                  type="email"
+                  name="ctaEmail"
+                  id="ctaEmail"
+                  class="cta__form__input"
+                  placeholder="Ex: marciorodrigues@gmail.com"
+                />
+              </div>
+            </div>
+            <div class="cta__form__input-wrapper">
+              <p class="cta__form__label">QUAL SEU DESAFIO?</p>
+              <ul class="cta__form__list">
+                <li class="cta__form__item" id="ctaOptionSiteLento">
+                  <svg-load name="zap" />
+                  <h3 class="cta__form__item__title">Site Lento</h3>
+                  <p class="cta__form__item__text">
+                    Preciso otimizar Core Web Vitals e velocidade.
+                  </p>
+                </li>
+                <li class="cta__form__item active" id="ctaOptionTracking">
+                  <svg-load name="target" />
+                  <h3 class="cta__form__item__title">Tracking & Pixels</h3>
+                  <p class="cta__form__item__text">
+                    Instalação de GTM, API de Conversão e Analytics.
+                  </p>
+                </li>
+                <li class="cta__form__item" id="ctaOptionNewProject">
+                  <svg-load name="project" />
+                  <h3 class="cta__form__item__title">Projeto Novo</h3>
+                  <p class="cta__form__item__text">
+                    Landing Page, E-commerce ou SaaS do zero.
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <button type="submit" class="cta__form__button">
+              <svg-load name="send" /> ENVIAR CONTATO
+            </button>
+            <small class="cta__form__small"
+              >*Seu contato vai direto para o meu WhatsApp Pessoal. Sem
+              spam.</small
+            >
+          </form>
+        </div>
+      </section>
     </main>
     <script type="module" src="/src/js/main.js"></script>
   </body>
