feat: :art: footer

--- a/index.html
+++ b/index.html
@@ -567,6 +567,50 @@
         </div>
       </section>
     </main>
+    <section class="footer">
+      <div class="footer__container container">
+        <ul class="footer__list">
+          <a
+            href="https://www.instagram.com/marciordg/"
+            class="footer__link"
+            target="_blank"
+          >
+            <div><svg-load name="instagram" /></div
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/marcio-rdg/"
+            class="footer__link"
+            target="_blank"
+          >
+            <div><svg-load name="linkedin" /></div>
+          </a>
+          <a
+            href="https://github.com/marcio-rdg"
+            class="footer__link"
+            target="_blank"
+          >
+            <div><svg-load name="github" /></div>
+          </a>
+          <a
+            href="https://www.tiktok.com/@marcio.rdg"
+            class="footer__link"
+            target="_blank"
+          >
+            <div><svg-load name="tiktok" /></div>
+          </a>
+          <a
+            href="mailto:contato@marciordg.com"
+            class="footer__link"
+            target="_blank"
+          >
+            <div><svg-load name="email" /></div>
+          </a>
+        </ul>
+        <p class="footer__text">
+          64.014.391/0001-86 MARCIO RDG © 2026. Feito com Código Puro.
+        </p>
+      </div>
+    </section>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
